--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ input:hover{
 .formWrap{
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
     padding: 50px;
