--- a/style.css
+++ b/style.css
@@ -144,12 +144,17 @@ input:hover{
     width: 1100px;
     height: 900px;
     padding-right: 50px;
+    position: relative;
 }
 .imageArea > img{
     width: 100%;
     height: 100%;
     border-radius: 5px;
     box-shadow: rgba(0,0,0,0.2) 0px 0px 5px 1px;
+}
+.imageArea > img.imgNone{
+    position: absolute;
+    left: -2000px;
 }
 .rightWrap{
     width: calc(100% - 1300px);
