--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ input:hover{
 .wrap{
     width: 100%;
     height: 100%;
-    display: none;
+    display: block;
 }
 .leftWrap{
     width: 1300px;
